--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: ruby
 rvm: 2.1.3
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
 script: bundle exec rspec
 before_install:
 - export DISPLAY=:99.0
