--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: ruby
 rvm: 2.1.3
 services:
   - postgresql
-before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
-script: bundle exec rspec
+script: bundle exec rake db:drop db:create db:migrate rspec
 before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
