--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 rvm: 2.1.3
 services:
   - postgresql
-script: bundle exec rake db:drop db:create db:migrate rspec
+script: bundle exec rake db:drop db:create db:migrate spec
 before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
